removed important and fixed the navigation bar on mobile #33 #32

--- a/style.css
+++ b/style.css
@@ -362,6 +362,9 @@ input, textarea {
 	.btn {
 		width: 35%;
 	}
+	#navbar a {
+		font-size: 1em;
+	}
 	#navbar {
 		position: fixed;
 		top: 0;
